--- a/.env.local.example
+++ b/.env.local.example
@@ -1,3 +1,4 @@
+# Rename this file to .env.local
 # Update these with your Supabase details from your project settings > API
 # https://app.supabase.com/project/_/settings/api
 NEXT_PUBLIC_SUPABASE_URL=your-project-url
